[gd_scene load_steps=18 format=3 uid="uid://d4lx7hr1xg5hw"]

[ext_resource type="Script" path="res://Scripts/Frog.gd" id="1_inmfm"]
[ext_resource type="Texture2D" uid="uid://b56gqtl58xog2" path="res://Art/Enemyies/frog.png" id="2_jgii0"]
[ext_resource type="PackedScene" uid="uid://b0og2rl10wb34" path="res://Scenes/Enemy/hurt_area_2d.tscn" id="2_l5hff"]
[ext_resource type="Shader" path="res://Scenes/life_flash.gdshader" id="3_32wwl"]
[ext_resource type="PackedScene" uid="uid://cc2bw6mmhabwl" path="res://Scenes/Enemy/bounce_area_2d.tscn" id="4_v1tbg"]
[ext_resource type="Script" path="res://Scripts/spriteshadercontroller.gd" id="5_n82k7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ca3vb"]
size = Vector2(12, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txex0"]
size = Vector2(8, 7)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l58gt"]
shader = ExtResource("3_32wwl")
shader_parameter/active = false
shader_parameter/Strength = 5.0
shader_parameter/RandomOffset = 5.0

[sub_resource type="Gradient" id="Gradient_kq13o"]
colors = PackedColorArray(0.835294, 0.0784314, 0.858824, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pboqu"]
gradient = SubResource("Gradient_kq13o")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sv2ep"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 1, 0)
scale_min = 3.0
scale_max = 10.0
color_ramp = SubResource("GradientTexture1D_pboqu")

[sub_resource type="Animation" id="Animation_1yn32"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yqlpo"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_awygw"]
resource_name = "prep"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74a8y"]
_data = {
"idle": SubResource("Animation_1yn32"),
"jump": SubResource("Animation_yqlpo"),
"prep": SubResource("Animation_awygw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sb2af"]
size = Vector2(12, 3)

[node name="Frog" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_inmfm")
jump_force = 250.0
speed = 400.0
life = 3

[node name="HurtArea2D" parent="." instance=ExtResource("2_l5hff")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ca3vb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_txex0")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_l58gt")
position = Vector2(1, 0)
texture = ExtResource("2_jgii0")
hframes = 3
frame = 1
script = ExtResource("5_n82k7")

[node name="GasParticles" type="GPUParticles2D" parent="."]
modulate = Color(0.835294, 0.0784314, 0.858824, 1)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_sv2ep")
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 0.5
trail_lifetime = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_74a8y")
}

[node name="BounceArea2D" parent="." instance=ExtResource("4_v1tbg")]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_sb2af")

[node name="SporeSpawnPoint" type="Node2D" parent="."]
position = Vector2(0, -3)

[connection signal="area_entered" from="BounceArea2D" to="." method="_on_bounce_area_2d_area_entered"]
